  http://sourceforge.net/support/tracker.php?aid=1822579 

  - Mistake of segmentation after <PRE>
  http://sourceforge.net/support/tracker.php?aid=1827479  

----------------------------------------------------------------------
 OmegaT 1.7.3 update 3 Changes
----------------------------------------------------------------------

1.7.3 update 3 vs. 1.7.3 update 2


  1 Enhancement
  1 Bugfix

----------------------------------------------------------------------
1.7.3 update 3

  Implemented requests:
  - Escape support for PO 
  http://sourceforge.net/support/tracker.php?aid=1869069    
  
  Bug fixes:

  - Wrong default encoding in XML (should be UTF-8) 
  http://sourceforge.net/support/tracker.php?aid=1941365   

----------------------------------------------------------------------
 OmegaT 1.7.3 update 2 Changes
----------------------------------------------------------------------

1.7.3 update 2 vs. 1.7.3 update 1


  4 Enhancements
  3 Bugfixes

----------------------------------------------------------------------
1.7.3 update 2

  Implemented requests:

  - Command line parameters for OmegaT.exe
  http://sourceforge.net/support/tracker.php?aid=1900264  

  - Windows installer
  http://sourceforge.net/support/tracker.php?aid=1596625   

  - DocBook 5.0 filter  
  http://sourceforge.net/support/tracker.php?aid=1907008   

  - Do not copy SVN/CVS folders from /source to /target  
  http://sourceforge.net/support/tracker.php?aid=1774502    
  
  Other enhancements:

  - New Arabic localisation (UI, readme, instant start)

  Bug fixes:

  - PO: Bad handling of plural messages on multiple lines 
  http://sourceforge.net/support/tracker.php?aid=1896781  

  - Some strings not translated when using external bundle
  http://sourceforge.net/support/tracker.php?aid=1922188 

  - XHTML: xmlns="http://www.w3.org... in every tag
  http://sourceforge.net/support/tracker.php?aid=1926940  

----------------------------------------------------------------------